## Process this file with automake to produce Makefile.in

#SUBDIRS = src pixmaps data po help
SUBDIRS = src pixmaps data po

EXTRA_DIST = \
	BUGS \
	autogen.sh \
	intltool-update.in \
	intltool-extract.in \
	intltool-merge.in \
	config.rpath \
	mkinstalldirs \
	tagtool.spec \
	tagtool.spec.in

ACLOCAL_AMFLAGS = -I m4
