scalable_files = files('TagTool.svg')
install_data(scalable_files, install_dir: prefix_datadir / 'icons/hicolor/scalable/apps')

# 16x16
install_data(files('TagTool-16.png'), install_dir: prefix_datadir / 'icons/hicolor/16x16/apps/', rename: ['TagTool.png'])

# 24x24
install_data(files('TagTool-24.png'), install_dir: prefix_datadir / 'icons/hicolor/24x24/apps/', rename: ['TagTool.png'])

# 32x32
install_data(files('TagTool-32.png'), install_dir: prefix_datadir / 'icons/hicolor/32x32/apps/', rename: ['TagTool.png'])

# 48x48
install_data(files('TagTool-48.png'), install_dir: prefix_datadir / 'icons/hicolor/48x48/apps/', rename: ['TagTool.png'])

# 64x64
install_data(files('TagTool-64.png'), install_dir: prefix_datadir / 'icons/hicolor/64x64/apps/', rename: ['TagTool.png'])

# 72x72
install_data(files('TagTool-72.png'), install_dir: prefix_datadir / 'icons/hicolor/72x72/apps/', rename: ['TagTool.png'])

# 96x96
install_data(files('TagTool-96.png'), install_dir: prefix_datadir / 'icons/hicolor/96x96/apps/', rename: ['TagTool.png'])

# 128x128
install_data(files('TagTool-128.png'), install_dir: prefix_datadir / 'icons/hicolor/128x128/apps/', rename: ['TagTool-.pg',])

# 192x192
install_data(files('TagTool-192.png'), install_dir: prefix_datadir / 'icons/hicolor/192x192/apps/', rename: ['TagTool-.pg',])

# 256x256
install_data(files('TagTool-256.png'), install_dir: prefix_datadir / 'icons/hicolor/256x256/apps/', rename: ['TagTool-.pg',])

# 512x512
install_data(files('TagTool-512.png'), install_dir: prefix_datadir / 'icons/hicolor/512x512/apps/', rename: ['TagTool-.pg',])

